# Renderer

./: .gitignore
WelolRenderer/: CMakeLists.txt
WelolRenderer/include/: AABB.h  Camera.h  Entity.h  Input.h  MousePicker.h  Renderable.h  Renderer.h  SceneView.h  Texture.h  WelolMath.h  objectFactory.h  objloader.h  shader.h  string_funcs.h  visualization.h
WelolRenderer/resource/: rectVertex.glsl
WelolRenderer/resource/3DModels/: bridge.mtl  camera.mtl
WelolRenderer/resource/shaders/: cameraFragment.glsl  cameraVertex.glsl  instancedRectsVertex.glsl  rectFragment.glsl  sceneViewLinesFragment.glsl  sceneViewLinesVertex.glsl  sceneViewVertex.glsl
WelolRenderer/src/: AABB.cpp  Camera.cpp  Demo.cpp  Entity.cpp  MousePicker.cpp  Renderable.cpp  Renderer.cpp  SceneView.cpp  SkyBox.cpp  Text.cpp  Texture.cpp  WelolMath.cpp  gizmo.cpp  objectFactory.cpp  objloader.cpp  shader.cpp  string_funcs.cpp
WelolRenderer/src/Demos/FirstDemo/: Demo.cpp
WelolRenderer/src/Demos/Lighting/: main.cpp  objectFactory.cpp  objectFactory.h
WelolRenderer/src/Demos/Lighting/shaders/: cyborgFragment.glsl  cyborgVertex.glsl  one.glsl  planetFragment.glsl  planetVertex.glsl  rockFragment.glsl  rockVertex.glsl  someotherThing.glsl  something.glsl
WelolRenderer/src/Demos/SkyBox/: SkyBox.cpp
